--- a/scss/base/_grid.scss
+++ b/scss/base/_grid.scss
@@ -1,20 +1,16 @@
 @use "sass:math";
 @use "sass:map";
 
+// Breakpoints, dimension, container, row, column, v.v
 $grid-breakpoints: (
-    xxl: 1400px,
-    xl: 1200px,
-    lg: 992px,
-    md: 768px,
+    xs: 0,
     sm: 576px,
+    md: 768px,
+    lg: 992px,
+    xl: 1200px,
+    xxl: 1400px,
 );
 $container-max-widths: (
-    // sm: 100%,
-    // md: 540px,
-    // lg: 720px,
-    // xl: 960px,
-    // xxl: 1140px,
-
     sm: 540px,
     md: 720px,
     lg: 960px,
@@ -41,7 +37,7 @@ $gutters: (
     --grid-gutter-x: #{$grid-gutter-width};
     --grid-gutter-y: 0;
 
-    width: 1370px;
+    width: 100%;
     margin-left: auto;
     margin-right: auto;
     @extend %gutter-padding;
@@ -49,7 +45,6 @@ $gutters: (
 
 .container {
     @extend .container-fluid;
-    width: 1370px;
 }
 
 .row {
@@ -69,13 +64,19 @@ $gutters: (
     flex: 1 0;
 }
 
-@mixin make-media-query($dimension) {
-    @media (max-width: ($dimension - 0.02)) {
+@mixin make-media-query($dimension, $bypass: false) {
+    @if $bypass {
         @content;
+    }
+
+    @else {
+        @media (min-width: $dimension) {
+            @content;
+        }
     }
 }
 
-@mixin make-row-columns($infix: null) {
+@mixin make-row-columns($infix) {
     @for $i from 1 through $grid-columns * 0.5 {
         .row-cols#{$infix}-#{$i}>* {
             flex: 0 0 auto;
@@ -84,7 +85,7 @@ $gutters: (
     }
 }
 
-@mixin make-columns($infix: null) {
+@mixin make-columns($infix) {
     @for $i from 1 through $grid-columns {
         .col#{$infix}-#{$i} {
             flex: 0 0 auto;
@@ -93,7 +94,7 @@ $gutters: (
     }
 }
 
-@mixin make-offsets($infix: null) {
+@mixin make-offsets($infix) {
     @for $i from 0 to $grid-columns {
         .offset#{$infix}-#{$i} {
             margin-left: if($i > 0, math.div(100%, $grid-columns) * $i, 0);
@@ -101,7 +102,7 @@ $gutters: (
     }
 }
 
-@mixin make-gutters($infix: null) {
+@mixin make-gutters($infix) {
     @each $i, $ratio in $gutters {
 
         .g#{$infix}-#{$i},
@@ -116,19 +117,12 @@ $gutters: (
     }
 }
 
-@include make-row-columns();
-
-@include make-columns();
-
-@include make-offsets();
-
-@include make-gutters();
-
 @each $breakpoint, $dimension in $grid-breakpoints {
     $max-width: map.get($container-max-widths, $breakpoint);
-    $infix: "-#{$breakpoint}";
+    $is-xs: $breakpoint ==xs;
+    $infix: if($is-xs, "", "-#{$breakpoint}");
 
-    @include make-media-query($dimension) {
+    @include make-media-query($dimension, $is-xs) {
         .container {
             max-width: $max-width;
         }
