--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -5,6 +5,7 @@
 }
 
 
+
 html {
     font-size: 62.5%;
 }
@@ -13,6 +14,7 @@ body {
     font-size: 1.6rem;
     font-family: Gordita, sans-serif;
     color: var(--text-color);
+    background: var(--body-bg);
 }
 
 a {
