--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -1,28 +1,81 @@
+@use "../abstracts";
+
+
+
+%flexItemCenter {
+    display: flex;
+    align-items: center;
+}
+
+
 .header {
-    background: #eee;
+    background: var(--header-bg-color);
+
+
 }
 
 .top-bar {
-    display: flex;
-    align-items: center;
+    @extend %flexItemCenter;
+    position: relative;
+
     padding: 30px 0;
+
+    @include abstracts.breakpoint(lg) {
+        padding: 20px 0;
+    }
+
+
+    @include abstracts.breakpoint(sm) {
+        justify-content: space-between;
+        padding: 16px 0;
+    }
+
+    &__more {
+        display: none;
+
+
+        @include abstracts.breakpoint(lg) {
+            display: block;
+        }
+    }
 }
 
 .navbar {
     margin-left: 144px;
-    margin-right: auto;
+    // margin-right: auto;
+
+    @include abstracts.breakpoint(xl) {
+        margin-left: 50px;
+    }
+
+    @include abstracts.breakpoint(lg) {
+        display: none
+    }
 
     &__list {
-        display: flex;
-        align-items: center;
-        gap: 30px;
+        @extend %flexItemCenter;
+    }
+
+    &__item {
+        &:first-child a {
+            padding-left: 0;
+        }
+
+        &:last-child a {
+            padding-right: 0;
+        }
+
+
+        &:hover .dropdown {
+            display: block;
+        }
     }
 
     &__link {
-        display: flex;
-        align-items: center;
+        @extend %flexItemCenter;
         gap: 6px;
-
+        height: 50px;
+        padding: 0 15px;
         font-size: 1.5rem;
         font-weight: 500;
         line-height: 146.667%;
@@ -34,20 +87,34 @@
 }
 
 .top-act {
-    display: flex;
-    align-items: center;
+    @extend %flexItemCenter;
     gap: 20px;
+    margin-left: auto;
+
+
+    @include abstracts.breakpoint(sm) {
+        margin-left: 0px;
+    }
 
     &__group {
-        display: flex;
-        align-items: center;
+        @extend %flexItemCenter;
 
         min-width: 50px;
         height: 50px;
 
         border-radius: 8px;
-        background: #fff;
-        box-shadow: 0px 20px 60px 10px rgba(237, 237, 246, 0.2);
+        background: var(--top-act-group-bg-color);
+        box-shadow: 0px 20px 60px 10px var(--top-act-shadow);
+
+        @include abstracts.breakpoint(md) {
+            display: none;
+        }
+    }
+
+    &__group--single {
+        @include abstracts.breakpoint(lg) {
+            display: none
+        }
     }
 
     &__group--single &__btn {
@@ -55,10 +122,10 @@
     }
 
     &__btn {
-        display: flex;
-        align-items: center;
+        @extend %flexItemCenter;
         gap: 10px;
         padding: 13px 20px;
+        cursor: pointer;
     }
 
     &__title {
@@ -70,7 +137,7 @@
     &__separate {
         width: 1px;
         height: 30px;
-        background: #ededf6;
+        background: var(--top-act-separate);
     }
 
     &__avatar {
@@ -78,5 +145,6 @@
         width: 50px;
         height: 50px;
         border-radius: 8px;
+        cursor: pointer;
     }
 }
