--- a/templates/header.html
+++ b/templates/header.html
@@ -1,43 +1,72 @@
 <div class="container">
   <div class="top-bar">
+    <!-- more -->
+    <button class="icon top-bar__more">
+      <img src="./assets/icons/more.svg" alt="" class="top-bar__more-icon" />
+    </button>
+
     <!-- Logo -->
-    <div class="logo">
+    <a href="./" class="logo">
       <img src="./assets/icons/logo.svg" alt="grocerymart" class="logo__img" />
       <h1 class="logo__title">grocerymart</h1>
-    </div>
+    </a>
 
     <!-- Navbar -->
     <nav class="navbar">
-      <ul class="navbar__list">
-        <li>
+      <ul class="navbar__list js-dropdown-list">
+        <li class="navbar__item">
           <a href="" class="navbar__link">
             Departments
             <img
               src="./assets/icons/arrow-down.svg"
               alt=""
-              class="navbar__arrow"
+              class="icon navbar__arrow"
             />
           </a>
+          <div class="dropdown">
+            <div class="dropdown__inner">
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+              Distinctio quaerat ullam alias officiis! Consectetur explicabo ut
+              rem omnis excepturi aut, quod a obcaecati, iure quo nesciunt sint
+              quasi nulla nostrum?
+            </div>
+          </div>
         </li>
-        <li>
+        <li class="navbar__item">
           <a href="" class="navbar__link">
             Grocery
             <img
               src="./assets/icons/arrow-down.svg"
               alt=""
-              class="navbar__arrow"
+              class="icon navbar__arrow"
             />
           </a>
+          <div class="dropdown">
+            <div class="dropdown__inner">
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+              Distinctio quaerat ullam alias officiis! Consectetur explicabo ut
+              rem omnis excepturi aut, quod a obcaecati, iure quo nesciunt sint
+              quasi nulla nostrum?
+            </div>
+          </div>
         </li>
-        <li>
+        <li class="navbar__item">
           <a href="" class="navbar__link">
             Beauty
             <img
               src="./assets/icons/arrow-down.svg"
               alt=""
-              class="navbar__arrow"
+              class="icon navbar__arrow"
             />
           </a>
+          <div class="dropdown">
+            <div class="dropdown__inner">
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+              Distinctio quaerat ullam alias officiis! Consectetur explicabo ut
+              rem omnis excepturi aut, quod a obcaecati, iure quo nesciunt sint
+              quasi nulla nostrum?
+            </div>
+          </div>
         </li>
       </ul>
     </nav>
@@ -46,19 +75,31 @@
     <div class="top-act">
       <div class="top-act__group top-act__group--single">
         <button class="top-act__btn">
-          <img src="./assets/icons/search.svg" alt="" class="top-act__icon" />
+          <img
+            src="./assets/icons/search.svg"
+            alt=""
+            class="icon top-act__icon"
+          />
         </button>
       </div>
       <div class="top-act__group">
         <button class="top-act__btn">
-          <img src="./assets/icons/heart.svg" alt="" class="top-act__icon" />
+          <img
+            src="./assets/icons/heart.svg"
+            alt=""
+            class="icon top-act__icon"
+          />
           <span class="top-act__title">03</span>
         </button>
 
         <div class="top-act__separate"></div>
 
         <button class="top-act__btn">
-          <img src="../assets/icons/buy.svg" alt="" class="top-act__icon" />
+          <img
+            src="../assets/icons/buy.svg"
+            alt=""
+            class="icon top-act__icon"
+          />
           <span class="top-act__title">$65.42</span>
         </button>
       </div>
