thêm nội dung mega menu

--- a/templates/header.html
+++ b/templates/header.html
@@ -25,10 +25,41 @@
           </a>
           <div class="dropdown">
             <div class="dropdown__inner">
-              Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-              Distinctio quaerat ullam alias officiis! Consectetur explicabo ut
-              rem omnis excepturi aut, quod a obcaecati, iure quo nesciunt sint
-              quasi nulla nostrum?
+              <div class="top-menu__main">
+                <!-- menu column -->
+                <div class="menu-column">
+                  <div class="menu-column__icon">
+                    <img
+                      src="./assets/img/category/cate-1.1.svg"
+                      alt=""
+                      class="menu-column__icon-1"
+                    />
+                    <img
+                      src="./assets/img/category/cate-1.2.svg"
+                      alt=""
+                      class="menu-column__icon-2"
+                    />
+                  </div>
+                  <div class="menu-column__content">
+                    <h2 class="menu-column__heading">All Departments</h2>
+                    <ul class="menu-column__list">
+                      <li>
+                        <a href="" class="menu-column__link"
+                          >Savings & Featured Shops</a
+                        >
+                      </li>
+                      <li>
+                        <a href="" class="menu-column__link">Electronics</a>
+                      </li>
+                      <li>
+                        <a href="" class="menu-column__link"
+                          >Clothing, Shoes & Accessories</a
+                        >
+                      </li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
         </li>
@@ -41,14 +72,14 @@
               class="icon navbar__arrow"
             />
           </a>
-          <div class="dropdown">
+          <!-- <div class="dropdown">
             <div class="dropdown__inner">
               Lorem ipsum, dolor sit amet consectetur adipisicing elit.
               Distinctio quaerat ullam alias officiis! Consectetur explicabo ut
               rem omnis excepturi aut, quod a obcaecati, iure quo nesciunt sint
               quasi nulla nostrum?
             </div>
-          </div>
+          </div> -->
         </li>
         <li class="navbar__item">
           <a href="" class="navbar__link">
@@ -59,14 +90,14 @@
               class="icon navbar__arrow"
             />
           </a>
-          <div class="dropdown">
+          <!-- <div class="dropdown">
             <div class="dropdown__inner">
               Lorem ipsum, dolor sit amet consectetur adipisicing elit.
               Distinctio quaerat ullam alias officiis! Consectetur explicabo ut
               rem omnis excepturi aut, quod a obcaecati, iure quo nesciunt sint
               quasi nulla nostrum?
             </div>
-          </div>
+          </div> -->
         </li>
       </ul>
     </nav>
