--- a/scss/components/_dropdown.scss
+++ b/scss/components/_dropdown.scss
@@ -2,9 +2,9 @@
     position: absolute;
     left: 0;
     padding-top: 54px;
-    display: none;
-    z-index: 1999;
-
+    // display: none;
+    // z-index: 1999;
+    width: min(1240px, 100%);
 
     &__inner {
         position: relative;
@@ -12,6 +12,7 @@
         border-radius: 20px;
         background: var(--dropdown-bg-color);
         box-shadow: 0px 40px 90px 20px var(--dropdown-shadow-color);
+        max-height: min(582px, 100vh - 158px);
 
 
         &::before {
@@ -23,5 +24,73 @@
             filter: var(--dropdown-arrow-color);
             z-index: -1;
         }
+    }
+}
+
+.top-menu {
+    height: 100%;
+
+    &__main {
+        width: 292px;
+        height: 100%;
+        border-right: 1px solid var(--top-menu-border-color);
+    }
+}
+
+.menu-column {
+    display: flex;
+    gap: 14px;
+
+    &__icon {
+        flex-shrink: 0;
+        width: 36px;
+        height: 36px;
+        position: relative;
+    }
+
+    &__content {
+        flex: 1;
+    }
+
+    &__icon-1 {
+        width: 30px;
+        height: 30px;
+        object-fit: cover;
+    }
+
+    &__icon-2 {
+        position: absolute;
+        width: 24px;
+        height: 24px;
+        object-fit: cover;
+        right: 0;
+        bottom: 0;
+    }
+
+    &__heading {
+        margin-top: 4px;
+        font-size: 1.6rem;
+        font-weight: 500;
+        line-height: 150%;
+
+
+    }
+
+
+    &__list {
+        margin-top: 26px;
+    }
+
+    &__link {
+        display: block;
+        padding: 7px 0;
+        font-size: 1.4rem;
+        line-height: 142.857%;
+
+        &:hover {
+            color: #0071dc;
+            font-weight: 500;
+        }
+
     }
 }
