--- a/scss/theme/_dark.scss
+++ b/scss/theme/_dark.scss
@@ -13,6 +13,9 @@ html.dark {
     --dropdown-shadow-color: rgba(23, 28, 40, 0.4);
     --dropdown-arrow-color: brightness(0) saturate(100%) invert(15%) sepia(32%) saturate(407%) hue-rotate(184deg) brightness(101%) contrast(87%);
 
+
+    --top-menu-border-color: #d2d1d6;
+
     @include abstracts.breakpoint(lg) {
         --header-bg-color: #171c28;
     }
