--- a/scss/theme/_light.scss
+++ b/scss/theme/_light.scss
@@ -19,6 +19,9 @@ html {
     --dropdown-bg-color: #FFFFFF;
     --dropdown-shadow-color: rgba(200, 200, 200, 0.4);
 
+
+    --top-menu-border-color: #d2d1d6;
+
     @include abstracts.breakpoint(lg) {
         --header-bg-color: #FFF;
     }
